--- a/assets/app.css
+++ b/assets/app.css
@@ -1082,7 +1082,7 @@ button:hover {
   width: calc(100px);
   border-width: 0;
   border-radius: 30px;
-  transition: background-color 0.2s 0s ease, width 0.2s 0s ease;
+  transition: background-color 0.2s 0s ease, width 0.2s 0s ease, border 0.2s 0s ease;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
@@ -1128,7 +1128,7 @@ button:hover {
   width: 56px;
   height: 30px;
   border-radius: 30px;
-  transition: background-color 0.2s 0s ease, left 0.2s 0s ease;
+  transition: background-color 0.2s 0s ease, left 0.2s 0s ease, border 0.2s 0s ease;
 }
 
 .rtl .slideswitch:after {
