--- a/assets/app.css
+++ b/assets/app.css
@@ -192,7 +192,7 @@ footer {
 
 body {
   font-size: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, "Migu 1C", "Noto Sans CJK JP Regular", "Noto Sans CJK JP", Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Migu 1C", "Noto Sans CJK JP Regular", "Noto Sans CJK JP", Arial, sans-serif;
   font-feature-settings: 'palt' 1;
   transition: color 0.2s 0s ease-out, background-color 0.2s 0s ease-out;
 }
@@ -736,8 +736,8 @@ button:hover {
 
 @media (orientation: landscape) and (max-aspect-ratio: 2/1) {
   .main-cover {
-    width: 35vw;
-    height: 35vw;
+    width: calc(50vw - 200px);
+    height: calc(50vw - 200px);
   }
 }
 
@@ -1021,6 +1021,22 @@ button:hover {
   background-color: #404040;
 }
 
+.config-range::-ms-track {
+  -webkit-appearance: none;
+  appearance: none;
+  transition: background-color 0.2s 0s ease-out;
+  border-radius: 4px;
+  height: 4px;
+}
+
+.dark .config-range::-ms-track {
+  background-color: #e0e0e0;
+}
+
+.light .config-range::-ms-track {
+  background-color: #404040;
+}
+
 .config-range::-moz-range-track {
   -moz-appearance: none;
   appearance: none;
@@ -1054,6 +1070,26 @@ button:hover {
 }
 
 .dark .config-range::-webkit-slider-thumb {
+  border: solid 3px #e0e0e0;
+  background-color: #202020;
+}
+
+.config-range::-ms-thumb {
+  appearance: none;
+  margin: 0 0 0 0;
+  width: 30px;
+  height: 30px;
+  box-sizing: border-box;
+  border-radius: 30px;
+  transition: border 0.2s 0s ease-out, background-color 0.2s 0s ease-out;
+}
+
+.light .config-range::-ms-thumb {
+  border: solid 3px #404040;
+  background-color: #ffffff;
+}
+
+.dark .config-range::-ms-thumb {
   border: solid 3px #e0e0e0;
   background-color: #202020;
 }
