--- a/assets/app.css
+++ b/assets/app.css
@@ -673,6 +673,10 @@ button:hover {
 }
 
 .song-artist {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
   flex: 1 1 auto;
   opacity: 0.7;
 }
@@ -727,8 +731,7 @@ button:hover {
     flex: 0 1 auto;
     order: 10;
     overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    -webkit-line-clamp: 1;
   }
 }
 
