--- a/assets/app.css
+++ b/assets/app.css
@@ -51,7 +51,7 @@ body {
   height: 100%;
   width: 100%;
   box-sizing: border-box;
-  padding: constant(safe-area-inset-top) constant(safe-area-inset-right) constant(safe-area-inset-bottom) constant(safe-area-inset-left);
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 
 main {
