--- a/assets/app.css
+++ b/assets/app.css
@@ -65,6 +65,7 @@ main {
 header {
   width: 100%;
   height: 44px;
+  flex: 0 0 44px;
   box-sizing: border-box;
   z-index: 1;
 }
@@ -150,6 +151,7 @@ footer {
   }
 
   footer {
+    flex: 0 0 120px; /* flex-basis: auto does not effect safari */
     height: 120px;
   }
 }
@@ -168,6 +170,7 @@ footer {
   }
 
   footer {
+    flex: 0 0 90px; /* flex-basis: auto does not effect safari */
     height: 90px;
   }
 }
